[package]
name = "twang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = "0.13.0"
cpal = "0.15.2"
anyhow = "1.0.70"
assert_no_alloc = "1.1.2"
midi-msg = "0.4.0"
midir = "0.9.1"
read_input = "0.8.6"

[dev-dependencies]
cpal = "0.15.2"
anyhow = "1.0.70"
plotters = "0.3.4"
criterion = "0.4.0"
midi-msg = "0.4.0"
midir = "0.9.1"
read_input = "0.8.6"
assert_no_alloc = "1.1.2"
